@@ -9,12 +9,12 @@ AUX adchpp-2.8.1-fix_disconnect_signal.patch 3044 SHA256 c8626cf2fe33e119266a54e
 AUX adchpp-2.8.1-fix_disconnects.patch 1269 SHA256 25a1aa11763b7e1666691740ada31989fa485a62068c9901909dccb29792b42c SHA512 dd9fc8f0c0929c7023aa33bab66a6cf2133084fa0203026ea5cda5da51bdcc123cee0ed691e716e0c96c86e67e67bccdac359f53715b10ccadb3138fa8a5f6c5 WHIRLPOOL 0ea42176c3227c86380b1d1df92af536690efef8e59f370735e8a124bae3053a282cb7ec42083d70d450462df39fb1b24cbe9ec7eba55df4b755cd1c8ac63e8d
 AUX adchpp-2.8.1-fix_python.patch 712 SHA256 844d58c65e4629c7406eca60147fe8c56bc5f70b5e3f56a2538695dc30a36a5d SHA512 ae3eb9e358af57172ab5a754be8e80cc9ed85c62d0354c21840f1af18dcddac38d84aa426854ce32d21e733cbb069f641e080b4e5db9137a334ef48f2c22f124 WHIRLPOOL 7b1eee8d19aff1ff2ab64a0eb92c12224ee2e9773ced37c28c03f3b6542a72df67075aa310fcd0160556363d1608dcfe3c2222fc7c088ec9ee62e550f5055191
 AUX adchpp.conf.d 310 SHA256 15955fc380ae76be3b235cb2d87cb55d7e356ff23a1bde47defc06b686e1ec57 SHA512 6a31e68bef59fca8841c88b83ca6f49a3012552921435d04c8c76cb4c7e9b044aa5ebac00ad97f751cb993860f6dd0c449c1d5a5b8a91f4cd7a814fd26813b6d WHIRLPOOL 8ff4e1975e4f8a6d28cababf379776eb57f1cf9b9f1477a423c6a9535956396ae9fec834a6ad79152920da0fcb3050193b26def1153c4da92a5d533d53e5e5e7
-AUX adchpp.init.d 469 SHA256 3dc6bc0c0cf7a3036f48dbef237249c30b9184b2842eb3d80ca2712b90c49a72 SHA512 423fe39b7e7ecc53738e9f8ccf963089f57252b353bfaaa99ec130474c4cee49c1a14da7f4c631d0b7d1ad0501fe269dc8ed9638c059dbbfc5eaee8650056b17 WHIRLPOOL cde358dcc4b1b6158f4678d6e466ff4f4b7451f72607324ee162b5563dbda397f754262727e622499ee57518ab46f0e4e624f31589dafafc97aad6996ca671f0
+AUX adchpp.init.d 517 SHA256 8be227ebd1e7acd7b80db458d2e9902d2536662e8a8bba8a9a073a6e4a1d781e SHA512 7003108291f8b050f479eb460e51021bfc8d755e00281198725eb1089b8798a84ef462a9771db554471f5da0bf642883079a0d53662cd1d6d30bb5d7f9a6cb48 WHIRLPOOL 6f35cd24dc41ec3c83216dfbaab1c1e2310ddae4df9df36a3e84755bdd591b18ca78a7c648322d587cd5a5b2f00914783a076231c5896d2e66a67223926da317
 AUX adchpp_runner.sh 185 SHA256 3fc062bea86aa313c20315a293c0164bf52fe272c0e46d0e2753cc29b5ca89cb SHA512 60eb17ed3c3d2244bbdf77e00a413a97da82cb2045e0761c7e86951ce31b7e8de7d3470fd420a0f2b09f0f0f46ab1125f49a1f289bc8cfcf49a7436fb79f1e3c WHIRLPOOL 04b60a57145ac8a8bb835a7bd2b23293fa913c78dbdcb93c070b8590188ee930a1cc4a8fe766cba21c50d42d680db359e0d4a051dd1ac7c9b84466b3db7c2503
 DIST adchpp_2.8.0_source.tar.gz 8446076 SHA256 7819f18f4fbd5a17f1e06ca9aa66f6c1a31d59cab7b0e600940283aa0e6307c2 SHA512 e8b35a1cbbf641004788b0647f70a0b9b59d7eafcf8b7bef6b5157c5331b703ff30e9dfe8fe2d7097b2a3afbce40e4cdd0655e9fc8d6192702030e2e19c8025b WHIRLPOOL 429af354c8355a91b23b5e9ccba853a5aebb53a5d9d9acd0006adf543483e0145061543c4027f0dfa6b5983d0669dc4f4f20a552a3eb52f10df339c5e4fdec26
 DIST adchpp_2.8.1_source.tar.gz 8551219 SHA256 666e68056d6e4fc1f59ed2822eed914af293fa708fb943a046b40b4ba294a4f3 SHA512 b2c9a8c5a7cc1648f63690ea23c81d0d5ee0a555cd0e3ee2b5b302b195be6fafeb32d520758da124ff0b0f74e3fd12093456004a493e7547afa57ab01250089e WHIRLPOOL d09836ce0a8fcafb4f22775a74401f95864d05b7964e2b1c2fd5966005c93db8806e56c8f7eb11c2e6d7885989a44d6f1c7762ffa68a852b3f6af6211c131dfd
 EBUILD adchpp-2.8.0.ebuild 4099 SHA256 c1115000de26fb362a30d5b7de5fa72fb58e09eb0d8898e2e2856f1f704fe917 SHA512 1c5c8ea7debd93bed566fbdc9f19c5edde99267d71434ccb2c540f486257efcb1beea536a204e47e4a80006fffcb116619932ffad92669c8535d6786ed3cef1a WHIRLPOOL 79fb246ddfa6b3d9d7939d73b2801927ab1fb8b0418347bdffddd62d5e888369461811d85c32f2a476d0a25e33c76697f7d27385541e4fca8a936b84660672ca
 EBUILD adchpp-2.8.1-r3.ebuild 4174 SHA256 ff097f091651ded4edc3786575ef74a395f87a851ee01f3a35961fec73e0958d SHA512 a63b815ece9fc0f4cdfde0c8d66ee78494c2b96e80b0a44ca8334a89d6f3395a9712200e4156a66dd696fc72d7690015a5f360dccbaca2a89d2079e8b9d4312d WHIRLPOOL 0fc82c8720afa63fe1cbed8dbcc23319dd79f8ed0f626c7df0d39d99e58219431b81e6228f662b33c00f2ce86ca7e659a168387c58072eb17ee42746df1a32da
-MISC ChangeLog 1665 SHA256 214a6cb7df35a020046217797bf490d0ea05b1f01c04f7d580df02147af4cd0c SHA512 60b166803065305784449dc839dcee446c96e77e4f2d0c9257bc830357c20d03b7bc871795dbd7ea52037e4cc341db90ce0e5f2c5691a2a199e8068b9547fbf8 WHIRLPOOL c4ca5c4f148cc6d6720875407be1fda3801393b810a43e8e9be1341ff787c04a2bea0ba43c72b744a87dd7311e69805bdf0e91f6c88ce4e16225ffa75283e727
+MISC ChangeLog 1787 SHA256 b9bd1a782bb6e54ecc1cf389676c1dbfa519562c349dd172441e8acafd1a6d52 SHA512 34f483287d442729319356e3f5890c875dea1ae2d456011fa10c82bbdeeccf671fdc271aa62536b0024cea2f2c97064098b24cf9a1f719e0b2b06b5bebc45b57 WHIRLPOOL 1ec5a7158ed4588390dd5bd42732eb92763df7b27117f9d2b41b090b7ed502e641570a1cf9846fdade8b21574f707e86415f7d5e0425d2e608faed6409afcade
 MISC TODO 112 SHA256 4d3a6f431d988c8ac37e6bbdb8fc946ddc591cce2029a83a339e0b16e4954d4c SHA512 297523e8d11393dc37db2616561e027cd39191cfbdc5b0fe5cc95b3b8f038e90b491ad10feb256506fad996e5b427990a6aa479976524cf22f873588705bbbb6 WHIRLPOOL 5f06b3cd7e94f6d5f905be92ab915f71763b009572d69b63de0e92411fb97591696bf4bb67913a1acc8b72291add029f4ccc6fe76cf3d640766e78caf056412d
 MISC metadata.xml 407 SHA256 f5001e99b6181be8bac1b3ba8dbbce6ff2d63084ea64816cbb16d53a6871738b SHA512 2d89602c893366202dd7bb25928869e85febc1bda1e3e1a6547149aa84a38eae542629356de26dede7d72eae1d0262a06edd50b963fb02c403f60164a393eea1 WHIRLPOOL 32509c63bbafb3c1b5e6c9c75cfa2fbcc47afeaa6903d266c8f8d167e5895f7c44c8759647c6f073630f56c5a12fdb14ea3c8742df9639ae8bd4dfa5c43f6cbf
